--- a/evaluacion_python_1.ipynb
+++ b/evaluacion_python_1.ipynb
@@ -431,28 +431,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['X1234567Z', 'X1234567', '12345678M', '1234567T', '12345677']"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X1234567Z\n",
+      "X1234567Z\n",
+      "X1234567\n",
+      "12345678M\n"
+     ]
     }
    ],
    "source": [
     "lista_dni = [\"X-1234567-Z\", \"X-1234567\", \"12345678-M\", \"1234567-T\", \"12345677\"] \n",
-    "\n",
-    "for dni in lista_dni:\n",
-    "    if len(dni) == 9 and dni\n",
+    "lista_dni2 = [str.replace('-','') for str in lista_dni]\n",
     "\n",
     "\n",
-    "lista_dni_2\n",
+    "for dni in lista_dni2:\n",
+    "    if dni == ? and dni == ? or dni == ? and dni == ?:\n",
+    "        print('Dni valido')\n",
+    "    else:\n",
+    "        print('Dni no valido')\n",
+    "    \n",
+    "\n",
     "\n",
     "\n"
    ]
