--- a/evaluacion_python_1.ipynb
+++ b/evaluacion_python_1.ipynb
@@ -130,7 +130,7 @@
     "print(string_up)\n",
     "\n",
     "string_lo = string1.lower()\n",
-    "print(string_lo)"
+    "print(string_lo)\n"
    ]
   },
   {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -299,6 +299,42 @@
     "        \n",
     "print(resultados)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Falta el número 6\n",
+      "Falta el número 2\n",
+      "Falta el número 37\n",
+      "{'falta_lista1': 6, 'falta_lista2': 2, 'falta_lista3': 37}\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista1 = [3,7,1,2,8,4,5]\n",
+    "lista2 = [4,6,1,3,5]\n",
+    "lista3 = [34,35,36,38,39,40]\n",
+    "\n",
+    "resultados = {}\n",
+    "\n",
+    "c = 1\n",
+    "lista_unida = [lista1, lista2, lista3]\n",
+    "\n",
+    "for lista in lista_unida:\n",
+    "    for i in range(min(lista),max(lista)):\n",
+    "        if i not in lista:\n",
+    "            print(F'Falta el número {i}')\n",
+    "            resultados.setdefault(F'falta_lista{c}', i)\n",
+    "            c += 1\n",
+    "            \n",
+    "print(resultados)"
    ]
   },
   {
@@ -431,40 +467,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_343/396402553.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdni\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlista_dni4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdni\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdni\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mint\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdni\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdni\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Dni valido'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dni valido\n",
+      "Dni no valido\n",
+      "Dni valido\n",
+      "Dni valido\n",
+      "Dni no valido\n"
      ]
     }
    ],
    "source": [
+    "letras_ini_nie =['X', 'Y', 'Z']\n",
+    "letras_nif_fin =['A', 'B', 'C', 'D', 'D', 'E', 'F', 'G', 'H', 'J', 'K', 'L', 'M', 'N', 'P', 'Q', 'R', 'S', 'T', 'V', 'W', 'X', 'Y', 'Z']\n",
+    "\n",
     "lista_dni = [\"X-1234567-Z\", \"X-1234567\", \"12345678-M\", \"1234567-T\", \"12345677\"] \n",
-    "lista_dni2 = [str.replace('-','') for str in lista_dni]\n",
-    "\n",
-    "lista_dni3 = [dni.split() for dni in lista_dni2]\n",
-    "lista_dni4 = []\n",
-    "\n",
-    "for sublista in lista_dni3:\n",
-    "    for letra in sublista:\n",
-    "        try:\n",
-    "            letra = int(letra)\n",
-    "            lista_dni4.append(letra)\n",
-    "        except:\n",
-    "            pass\n",
-    "        \n",
+    "lista_dni2 = [str_.split('-') for str_ in lista_dni]\n",
     "\n",
     "\n",
-    "for dni in lista_dni4:\n",
-    "    if type(dni[:1]) is str and type(dni[1:8]) is int or type(dni[:9]) is str and type(dni[-1]) is int:\n",
+    "\n",
+    "for sublista in lista_dni2:\n",
+    "    if len(sublista) == 3 and sublista[0] in letras_ini_nie and sublista[1].isdigit() == True or len(sublista) == 2 and sublista[0].isdigit() == True and sublista[1] in letras_nif_fin: \n",
     "        print('Dni valido')\n",
     "    else:\n",
     "        print('Dni no valido')\n",
@@ -476,10 +504,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = '012345'\n",
+    "\n",
+    "p.isdigit()"
+   ]
   },
   {
    "attachments": {},
@@ -503,10 +546,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[19, 43, 26]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "L = [4, 19, -5, 100, 53, 43, 74, -83, 13.5, 26]\n",
+    " \n",
+    "numero_comp =30\n",
+    "repet_max = 3\n",
+    "contador = 0\n",
+    "\n",
+    "lista_parecidos = []\n",
+    "\n",
+    "while contador <= repet_max:\n",
+    "    for num in L:\n",
+    "        if num >= (numero_comp - 15) and num <= (numero_comp + 15):\n",
+    "            lista_parecidos.append(num)\n",
+    "        contador += 1\n",
+    "print(lista_parecidos)       \n",
+    "\n",
+    "        \n"
+   ]
   }
  ],
  "metadata": {
